# aws-s3-analyzer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  compose.yaml
.github/workflows/: pytlint.yml  pytlint_analyzer.yml  pytlint_backend.yml
analyzer/: .pylintrc  pyproject.toml
analyzer/src/: main.py
analyzer/src/methods/: analyzer.py
analyzer/src/model/: s3_folder.py  s3_tree.py
backend/: .dockerignore  .pylintrc  Dockerfile  pyproject.toml
backend/src/: main.py
backend/tests/: test_main.py
backend/tests/data/: foo-bar.json  summary.json
docs/: Gemfile  _config.yml  about.markdown  index.markdown
docs/_layouts/: home.html  post.html
docs/_posts/: 2024-09-01-analyzer.markdown  2024-09-02-backend.markdown  2024-09-03-frontend.markdown  2024-09-04-devops.markdown
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  index.js
frontend/src/components/GeneralLayout/: generalLayout.scss  index.jsx
frontend/src/components/SideBar/: index.jsx  sideBar.scss
frontend/src/components/TopBar/: index.jsx
frontend/src/pages/: router.js
frontend/src/pages/ErrorPage/: index.jsx
frontend/src/pages/HomePage/: home.scss  index.jsx
frontend/src/pages/S3TreePage/: Tree.jsx  TreeNode.jsx  index.jsx  s3tree.scss
frontend/src/services/: infoService.ts
frontend/src/utils/: formatBytes.ts
